Placeholder text for kusto query editor has been aligned correctly

--- a/media/queryEditor.css
+++ b/media/queryEditor.css
@@ -1035,7 +1035,7 @@
 		.query-editor-placeholder {
 			position: absolute;
 			left: 56px;
-			top: 42px;
+			top: 33px;
 			right: 10px;
 			pointer-events: none;
 			user-select: none;
